--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,8 @@ button {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 
     border: 1px solid #333333;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
